# chess

./: '  .gitignore  ;w  Cargo.toml  README.md  ROADMAP.md  TODO.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
.cargo/: config.toml
apps/desktop/: package.json  vite.config.ts.timestamp-1687344958764.mjs
apps/expo/: package.json
apps/server/: Cargo.toml  bindings.ts  package.json  tsconfig.json
apps/server/src/: main.rs  rspc_router.rs
apps/server/src/router/: chess.rs  mod.rs  prelude.rs
apps/server/ts/: bindings.ts  react.tsx  types.ts
apps/web/: next.config.mjs  package.json
apps/web/src/app/: GlobalContext.tsx  layout.tsx  page.tsx
apps/web/src/app/chess/: Chess.tsx  ChessContext.tsx  DraggingPieceContext.tsx  layout.tsx  page.tsx
apps/web/src/app/chess/ChessBoard/: ChessBoard.tsx  Piece.tsx  Square.tsx  config.ts  index.tsx  pawnPromotion.tsx  utils.ts
apps/web/src/features/: eventHistory.ts  index.ts
apps/web/src/hooks/: index.ts
apps/web/src/pages/: _app.tsx
apps/web/src/utils/: components.tsx
crates/engine/: Cargo.toml  README.md  package.json
crates/engine/_deprecated/attack_tables/: README.md  bishop.rs  king.rs  knight.rs  pawn.rs  prelude.rs  rook.rs
crates/engine/_deprecated/magic/: mod.rs
crates/engine/data/: __magic_gen.rs  magic_gen.rs
crates/engine/data/built_at/: 1693487776.txt  1693487777.txt  1693487779.txt  1693488514.txt  1693488521.txt  1693488538.txt  1693488572.txt  1693488624.txt  1693488645.txt  1693488655.txt  1693488715.txt  1693488770.txt  1693488792.txt  1693488802.txt  1693488835.txt  1693488901.txt  1693488913.txt  1693488919.txt  1693489131.txt  1693489132.txt  1693489135.txt  1693489150.txt  1693489154.txt  1693489164.txt  1693489167.txt  1693489169.txt  1693489173.txt  1693489175.txt  1693489179.txt  1693489191.txt  1693489193.txt  1693490405.txt  1693490426.txt  1693490481.txt  1693490799.txt  1693490806.txt  1693490810.txt  1693490886.txt  1693490889.txt  1693490896.txt  (+115 more)
crates/engine/src/: board.rs  game.rs  lib.rs  main.rs  moves.rs  piece.rs
crates/engine/src/bitboard/: bitboard.rs  magic.rs  mod.rs
crates/engine/src/bitboard/attack_tables/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  prelude.rs  rook.rs
crates/engine/src/bitboard/magic/: mod.rs
crates/engine/src/boards/: _ascii.rs  ascii.rs  chess_board.rs  mask_board.rs  mod.rs
crates/engine/src/core/: board.rs  game.rs  instructions.rs  main.rs  mod.rs  moves.rs  piece.rs  position.rs  team.rs
crates/engine/src/core/board/: ascii_board.rs  ascii_grid.rs  board.rs  file.rs  mod.rs  rank.rs  square.rs
crates/engine/src/core/moves/: generate.rs  moves.rs
crates/engine/src/core/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs
crates/engine/src/core/utils/: position.rs
crates/engine/src/game/: actions.rs  board.rs  mod.rs  moves.rs
crates/engine/src/game/moves/: mod.rs  movegen.rs  piece_moves.rs
crates/engine/src/notations/: FEN.rs  PGN.rs  SAN.rs  _SAN.rs  mod.rs
crates/engine/src/primitives/: instructions.rs  mod.rs  team.rs
crates/engine/src/primitives/board/: board.rs  castling.rs  file.rs  mod.rs  rank.rs  square.rs
crates/engine/src/primitives/moves/: generate.rs  mod.rs  moves.rs
crates/engine/src/primitives/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs
crates/engine/src/primitives/piece/_deprecated/: king.rs  pawn.rs
crates/engine/src/utils/: enums.rs  traits.rs
prisma/: Cargo.toml  package-lock.json  package.json  schema.prisma
prisma/src/: lib.rs  prisma_.rs
