[workspace]
resolver = "2"
members = [
  "crates/*",
  # "common/*",
  "prisma",
  # "crates/p2p/tunnel",
  # "crates/p2p/tunnel/utils",
  # "apps/cli",
  "apps/desktop/src-tauri",
  # "apps/desktop/crates/*",
  # "apps/mobile/crates/*",
  # "apps/server",
]

[workspace.dependencies]
prisma-client-rust =  { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "spacedrive", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "spacedrive", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-sdk = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "spacedrive", features = [
  "sqlite",
], default-features = false }

rspc = { version = "0.1.2" }
specta = { version = "0.0.6" }
httpz = { version = "0.0.3" }

swift-rs = { version = "1.0.1" }

tokio = { version = "1.25.0" }
