[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }

engine = { path = "../../crates/engine"  }

axum = "0.6.16"
rspc = { version = "0.1.3", features = ["axum"] }
tower-http = { version = "0.4.0", features = ["cors"] }
# httpz = { workspace = true, features = ["axum"] }
# tokio = { workspace = true, features = ["sync", "rt-multi-thread", "signal"] }
# tracing = "0.1.36"
# ctrlc = "3.2.3"
# http = "0.2.8"
# hyper = "0.14.23"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
