[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
specta.workspace = true
tokio = { workspace = true, features = ["full"] }

engine = { path = "../../crates/engine"  }
rspc-httpz = { path = "../../../../../external/crates/rspc/crates/httpz", features = [ "axum" ] }

axum = "0.6.20"
rspc = { workspace = true }
tower-http = { version = "0.4.0", features = ["cors"] }
thiserror = "1.0.50"
# httpz = { workspace = true, features = ["axum"] }
# tokio = { workspace = true, features = ["sync", "rt-multi-thread", "signal"] }
# tracing = "0.1.36"
# ctrlc = "3.2.3"
# http = "0.2.8"
# hyper = "0.14.23"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
