[package]
name = "engine"
version = "0.0.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
rspc = { workspace = true, features = [] }
serde-big-array = "0.5.1"
itertools = "0.11.0"
rand = { version = "0.8.5", features = ["small_rng"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
